--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -1,7 +1,5 @@
 version: "2.0"
-
 nlu:
-
 - intent: greet
   examples: |
     - hey
@@ -18,7 +16,7 @@ nlu:
     - goodmorning
     - goodevening
     - good afternoon
-
+    - bonjour
 - intent: goodbye
   examples: |
     - good afternoon
@@ -32,7 +30,6 @@ nlu:
     - see you around
     - bye bye
     - see you later
-
 - intent: affirm
   examples: |
     - yes
@@ -45,7 +42,6 @@ nlu:
     - o
     - Yes
     - Si
-
 - intent: deny
   examples: |
     - no
@@ -55,7 +51,6 @@ nlu:
     - don't like that
     - no way
     - not really
-
 - intent: mood_great
   examples: |
     - perfect
@@ -72,7 +67,6 @@ nlu:
     - so so perfect
     - so good
     - so perfect
-
 - intent: mood_unhappy
   examples: |
     - my day was horrible
@@ -89,15 +83,9 @@ nlu:
     - extremly sad
     - so saad
     - so sad
-
 - intent: bot_challenge
   examples: |
     - are you a bot?
     - are you a human?
     - am I talking to a bot?
     - am I talking to a human?
-
-regex: number
-    - \d{1,3}
-    - 1
-    - 21
