--- a/data/rules.yml
+++ b/data/rules.yml
@@ -1,23 +1,13 @@
 version: "2.0"
-
 rules:
-
 - rule: Say goodbye anytime the user says goodbye
   steps:
   - intent: goodbye
   - action: utter_goodbye
-
 - rule: Say 'I am a bot' anytime the user challenges
   steps:
   - intent: bot_challenge
   - action: utter_iamabot
-
-#- rule: Activate form
-#  steps:
-#  - intent: greet
-#  - action: name_form
-#  - active_loop: name_form
-
 - rule: Submit form
   condition:
   - active_loop: name_form
@@ -26,4 +16,5 @@ rules:
   - active_loop: null
   - slot_was_set:
     - requested_slot: null
+  - action: draw_graph
   - action: utter_submit
