--- a/data/rules.yml
+++ b/data/rules.yml
@@ -8,13 +8,23 @@ rules:
   steps:
   - intent: bot_challenge
   - action: utter_iamabot
-- rule: Submit form
+- rule: Submit name form
   condition:
   - active_loop: name_form
   steps:
-  - action: name_form
+  - action:  name_form
   - active_loop: null
   - slot_was_set:
     - requested_slot: null
-  - action: draw_graph
+  # - action: draw_graph
+  - action: utter_submit
+- rule: Submit daily form
+  condition:
+  - active_loop: daily_form
+  steps:
+  - action:  daily_form
+  - active_loop: null
+  - slot_was_set:
+    - requested_slot: null
+  # - action: draw_graph
   - action: utter_submit
