--- a/config.yml
+++ b/config.yml
@@ -1,39 +1,18 @@
-#language: fr
-#pipeline:
-#- name: SpacyNLP
-#  model: fr_core_news_md
-#  case_sensitive: false
-#- name: SpacyTokenizer
-#- name: SpacyFeaturizer
-#- name: RegexFeaturizer
-#- name: LexicalSyntacticFeaturizer
-#- name: CountVectorsFeaturizer
-#- name: RegexEntityExtractor
-#  analyzer: char_wb
-#  min_ngram: 1
-#  max_ngram: 4
-#- name: DIETClassifier
-#  epochs: 100
-#- name: EntitySynonymMapper
-#- name: ResponseSelector
-#policies:
-#- name: MemoizationPolicy
-#- name: RulePolicy
 language: fr
 pipeline:
-  - name: WhitespaceTokenizer
-  - name: RegexFeaturizer
-  - name: LexicalSyntacticFeaturizer
-  - name: CountVectorsFeaturizer
-  - name: CountVectorsFeaturizer
-    analyzer: char_wb
-    min_ngram: 1
-    max_ngram: 4
-  - name: DIETClassifier
-    epochs: 100
-  - name: EntitySynonymMapper
-  - name: ResponseSelector
+- name: WhitespaceTokenizer
+- name: RegexFeaturizer
+- name: LexicalSyntacticFeaturizer
+- name: CountVectorsFeaturizer
+- name: CountVectorsFeaturizer
+  analyzer: char_wb
+  min_ngram: 1
+  max_ngram: 4
+- name: DIETClassifier
+  epochs: 100
+- name: EntitySynonymMapper
+- name: ResponseSelector
 policies:
-  - name: MemoizationPolicy
-  - name: RulePolicy
-
+- name: MemoizationPolicy
+- name: RulePolicy
+- name: TEDPolicy
